  listed
- If an error occurs while loading one of the files involved in a
  multi-file search, the search will continue; previously it would have
  been aborted. Any errors will be listed in a dialog box after the
  search is complete.
- Commands in View->Splitting menu moved to top level of View menu
- Updated PL-SQL mode (Steve Snider)
- Updated MS-DOS batch mode (Mirco Bova)

+ Neutral

- Syntax highlighting can no longer be disabled -- too many features
  (bracket matching, commenting commands) rely on syntax info now

+ Bug Fixes

- JEditTextArea now uses type-safe buffer property accessors, so there
  shouldn't be any more ClassCastExceptions
- Fixed stack overflow if attempting to use URL filesystem (to open an
  http:// URL, for instance)
- Fixed stupid bug in installer that affected MacOS X installation
- File system browser's parent directory view could not be completely
  hidden by dragging the split pane
- Pressing the left arrow key in the file system browser didn't always
  work
- Bracket matching would sometimes show a status bar message even if the
  bracket was visible
- Fixed another minor bracket repaint problem that would occur if the
  matched bracket was not visible and the text area lost focus
- Select Line, Select Word, Select Paragraph actions were slightly
  broken
- Fixed minor undo modified flag clearing bug
- Pressing the tab key with a one-line selection would insert a hard tab
  even if soft tabs were enabled
- Deprecated MiscUtilities.compareVersions() method was an instance
  method, which made plugins that used it throw VerifyErrors on startup.
  These plugins will now work again (but should eventually be updated to
  call non-deprecated methods).
- Fixed another search and replace bug triggered by the Tags plugin
- When searching in multiple selections, HyperSearch would create one
  tree node for each selection
- InputHandler.readNextChar() didn't work with all characters